--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,26 +7,59 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <div class="container">
-    <div class="user_nav">
-      <% if user_signed_in? %>
-    Logged in as <strong><%= current_user.username %></strong>.
-      <%= link_to 'Edit profile', edit_user_registration_path %> |
-      <%= link_to "Logout", destroy_user_session_path, method: :delete %> |
-      <%= link_to "Home", root_path %>
-  <% else %>
-      <%= link_to "Sign up", new_user_registration_path %> |
-      <%= link_to "Login", new_user_session_path %> |
-      <%= link_to "Home", root_path %>
-  <% end %>
-    </div>
+
+  <div id="name">
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <%= link_to "Erin", "/", class: "navbar-brand"  %>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav navbar-left special-color">
+              <li><%=link_to 'Blog', posts_path%></li>
+              <li><%=link_to 'Skillz', skills_path%></li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right special-color">
+            <li class="dropdown">
+              <% if current_user %>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                  <%= current_user.username %> <span class="caret"></span>
+                </a>
+              <% else %>
+                  <p><%= link_to "Login", new_user_session_path %> | <%= link_to "Sign up", new_user_registration_path %></p>
+              <% end %>
+
+              <ul class="dropdown-menu">
+                <% if current_user %>
+                  <% if current_user.admin %>
+                    <li><%= link_to "Manage Accounts", users_path %></li>
+                  <% end %>
+                  <li><%= link_to 'Edit profile', edit_user_registration_path %></li>
+                  <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
+                <% end %>
+              </ul>
+            </li>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+    </nav>
+
 
     <% flash.each do |name, msg| %>
       <%= content_tag :div, msg, id: "flash_#{name}" %>
     <% end %>
 
-
+<div class="container">
   <%= yield %>
+</div>
 </div>
 
 </body>
