--- a/app/views/skills/new.html.erb
+++ b/app/views/skills/new.html.erb
@@ -1,9 +1,3 @@
 <h1>Add a Skill</h1>
 
-<%= form_for @skill do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
-  <%= f.label :description %>
-  <%= f.text_field :description %>
-  <%= f.submit %>
-<% end %>
+<%= render "form" %>
