--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,3 +1,6 @@
+<%= render('layouts/errors', :object => @post) %>
+2
+
 <div class="container">
   <%= form_for @post do |f| %>
     <%= f.label :title %>
