--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,3 +1,6 @@
+<%= render "layouts/errors", :object => @project %>
+2
+
 <%= form_for [@skill, @project] do |f| %>
   <%= f.label :title %>
   <%= f.text_field :title %>
