--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -8,13 +8,19 @@
   <% @posts.each do |post| %>
     <h3><%= post.title %></h3>
     <p><%= post.description %></p>
-    <% if current_user %>
-      <%= link_to "Add Comment", new_post_comment_path(post) %>
-    <% end %>
-    <% if post.comments.any? %>
-      <% post.comments.each do |comment| %>
-        <p><%= comment.description %></p>
-        <p>Posted By: <%= User.find(comment.user_id).username %></p>
+
+    <ul class="list-unstyled comments">
+      <% if post.comments.any? %>
+        <% post.comments.each do |comment| %>
+          <li class="comment">
+            <p><%= comment.description %></p>
+            <p>Posted By: <%= User.find(comment.user_id).username %></p>
+          </li>
+        <% end %>
       <% end %>
+    </ul>
+
+    <% if current_user %>
+      <%= link_to "Add Comment", new_post_comment_path(post), :id => "add-comment", remote: true %>
     <% end %>
   <% end %>
